<?xml version="1.0" encoding="utf-8"?>
<resources> <!-- Reply Preference -->
    <string-array name="criteria_entries">
        <item>Title</item>
        <item>Type</item>
    </string-array>
    <string-array name="criteria_values">
        <item>title</item>
        <item>type</item>
    </string-array>
    <!-- Reply Preference -->
    <string-array name="reply_entries">
        <item>Reply</item>
        <item>Reply to all</item>
    </string-array>

    <string-array name="reply_values">
        <item>reply</item>
        <item>reply_all</item>
    </string-array>
</resources>