...


    <Spinner
        android:id="@+id/spinnerOpciones"
        android:layout_width="99dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/rv_beer_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toEndOf="@+id/searchView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

...
