...
        android:text="@string/repeat_password"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tv_login_title"
        app:layout_constraintTop_toBottomOf="@id/et_password" />

    <EditText
        android:id="@+id/et_repassword"
        android:layout_width="305dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:autofillHints="password"
        android:backgroundTint="#00BCD4"
        android:gravity="start"
...
    <Button
        android:id="@+id/bt_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#8BC34A"
        android:text="¡Unete!"
        android:textAllCaps="false"
        android:textColor="#2A2929"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_login_title"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/tv_login_title"
...
