...
    <string name="valid_user_msg">No te pases bebiendo...</string>
    <string name="invalid_user_msg">Ups! Te has equivocado de contraseña... ¿No?</string>
    <string name="tv_register">¡Únete!</string>
    <string name="repeat_password">Repite tu contraseña</string>
    <string name="visit_website">www.unex.es</string>
    <string name="greeting">Hola cervecero %s!</string>
    <string name="listFragment">Lista</string>
    <string name="achievementsFragment">Logros</string>
    <string name="historyFragment">Historial</string>
    <string name="settingsFragment">Ajustes</string>
    <string name="StatisticsFragment">Estadísticas</string>
    <string name="CommentsFragment">Comentarios</string>
    <string name="AddCommentFragment">Añadir Comentario</string>
...
