<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<PreferenceCategory app:title="Autologin">

    <SwitchPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="false"
        android:title="Recuerdame"
        app:key="rememberme" />
    <EditTextPreference
        app:defaultValue="Username"
        app:key="username"
        app:title="Nombre de Usuario"
        app:useSimpleSummaryProvider="true" />
    <EditTextPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="12345"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="Contraseña"
        app:key="password"
        app:useSimpleSummaryProvider="true" />

</PreferenceCategory>


    </PreferenceScreen>